--- a/rider-junit5/src/test/resources/datasets/tweetBeforeEachOnSuperClass.yml
+++ b/rider-junit5/src/test/resources/datasets/tweetBeforeEachOnSuperClass.yml
@@ -1,4 +1,4 @@
 TWEET:
-  - ID: "before-each-superclass"
-    CONTENT: "tweet before each on superclass!"
+  - ID: "d"
+    CONTENT: "super class tweet before each on superclass!"
     likes: 19
