#610 fix support for parent classes hierarchy (#612)
* refs #610 fix annotation support for parent classes hierarchy

---------

Co-authored-by: Lee <hosing.lee@hsl-it-solutions.nl>

--- a/rider-junit5/src/test/resources/datasets/tweetBeforeEachOnSuperClass.yml
+++ b/rider-junit5/src/test/resources/datasets/tweetBeforeEachOnSuperClass.yml
@@ -1,4 +1,5 @@
 TWEET:
-  - ID: "before-each-superclass"
-    CONTENT: "tweet before each on superclass!"
+  - ID: "d"
+    CONTENT: "super class tweet before each on superclass!"
     likes: 19
+    date: "[UNIX_TIMESTAMP]"
