--- a/rider-junit5/pom.xml
+++ b/rider-junit5/pom.xml
@@ -91,13 +91,19 @@
         <dependency>
             <groupId>io.micronaut</groupId>
             <artifactId>micronaut-inject</artifactId>
-            <version>1.3.6</version>
+            <version>3.10.4</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.micronaut.data</groupId>
+            <artifactId>micronaut-data-tx</artifactId>
+            <version>3.10.0</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>io.micronaut.test</groupId>
             <artifactId>micronaut-test-junit5</artifactId>
-            <version>1.2.0</version>
+            <version>3.9.2</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
